--- a/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
@@ -79,7 +79,7 @@
         {
             if (nuevosCorreosApps > 0)
             {
-                nuevosCorreosMensaje = "1 Nuevos Correo (Apps)";
+                nuevosCorreosMensaje = "1 Nuevo Correo (Apps)";
             }
             else if (nuevosCorreosApps > 1)
             {
