--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -172,6 +172,10 @@
 
             window.scrollTo({ top: y, behavior: 'smooth' });
         }
+
+        function ocultar(id) {
+            document.getElementById(id).style.display = 'none';
+        }
     </script>
 
     <div id="components-reconnect-modal" style="display: none"/>
