--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -2,6 +2,7 @@
 @using Juegos;
 @using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.AspNetCore.Identity;
+@using Microsoft.JSInterop
 @using Newtonsoft.Json;
 @using Tiendas2
 @using pepeizqs_deals_web.Areas.Identity.Data;
@@ -9,10 +10,11 @@
 @inject UserManager<Usuario> UserManager
 @inject SignInManager<Usuario> SignInManager
 @inject IHttpContextAccessor HttpContextAccessor
+@inject IJSRuntime JavaScript
 
-@if (SignInManager.IsSignedIn(HttpContextAccessor.HttpContext!.User) == true)
+@if (usuario != null)
 {
-    @if (deseadosMostrar.Count > 0)
+    if (deseadosMostrar.Count > 0)
     {
         <div style="background-color: var(--fondoCuerpo); position: sticky; position: -webkit-sticky; top: 70px; z-index: 1; margin: -10px; padding: 10px;">
             <div style="display: flex; align-items: center; width: 100%;">
@@ -115,146 +117,158 @@
 
 @code {
 
-    #nullable disable
+	#nullable disable
 
-    [Parameter]
-    public string idioma { get; set; }
+	[Parameter]
+	public string idioma { get; set; }
 
-    [Parameter]
-    public string dominio { get; set; }
+	[Parameter]
+	public string cargando { get; set; }
 
-    private List<JuegoDeseadoMostrar> deseadosMostrar = new List<JuegoDeseadoMostrar>();
-    private Usuario usuario = new Usuario();
+	private List<JuegoDeseadoMostrar> deseadosMostrar = new List<JuegoDeseadoMostrar>();
+	private Usuario usuario = new Usuario();
 
-    private int cantidad = 0;
+	private int cantidad = 0;
 
-    protected override async Task OnInitializedAsync()
-    {
-        usuario = UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User).Result;
+	protected override async Task OnInitializedAsync()
+	{
+		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
 
-        if (usuario != null)
-        {
-            deseadosMostrar = new List<JuegoDeseadoMostrar>();
+		if (usuario != null)
+		{
+			deseadosMostrar = new List<JuegoDeseadoMostrar>();
 
-            #region Leer Cuenta Steam
+			#region Leer Cuenta Steam
 
-            bool tiempo = true;
+			bool tiempo = true;
 
-            if (string.IsNullOrEmpty(usuario.SteamAccount) == false && string.IsNullOrEmpty(usuario.SteamAccountLastCheck) == false)
-            {
-                if (Convert.ToDateTime(usuario.SteamAccountLastCheck) + TimeSpan.FromDays(2) > DateTime.Now)
-                {
-                    tiempo = false;
-                }
-            }
+			if (string.IsNullOrEmpty(usuario.SteamAccount) == false && string.IsNullOrEmpty(usuario.SteamAccountLastCheck) == false)
+			{
+				if (Convert.ToDateTime(usuario.SteamAccountLastCheck) + TimeSpan.FromDays(2) > DateTime.Now)
+				{
+					tiempo = false;
+				}
+			}
 
-            if (tiempo == true)
-            {
-                if (string.IsNullOrEmpty(usuario.SteamAccount) == false)
-                {
-                    SteamUsuario datos = await APIs.Steam.Cuenta.CargarDatos(usuario.SteamAccount);
+			if (tiempo == true)
+			{
+				if (string.IsNullOrEmpty(usuario.SteamAccount) == false)
+				{
+					SteamUsuario datos = await APIs.Steam.Cuenta.CargarDatos(usuario.SteamAccount);
 
-                    usuario.SteamGames = datos.Juegos;
-                    usuario.SteamWishlist = datos.Deseados;
-                    usuario.Avatar = datos.Avatar;
-                    usuario.Nickname = datos.Nombre;
-                    usuario.SteamAccountLastCheck = DateTime.Now.ToString();
-                    usuario.OfficialGroup = datos.GrupoPremium;
-                    usuario.OfficialGroup2 = datos.GrupoNormal;
+					usuario.SteamGames = datos.Juegos;
+					usuario.SteamWishlist = datos.Deseados;
+					usuario.Avatar = datos.Avatar;
+					usuario.Nickname = datos.Nombre;
+					usuario.SteamAccountLastCheck = DateTime.Now.ToString();
+					usuario.OfficialGroup = datos.GrupoPremium;
+					usuario.OfficialGroup2 = datos.GrupoNormal;
 
-                    await UserManager.UpdateAsync(usuario);
-                }				
-            }
+					await UserManager.UpdateAsync(usuario);
+				}				
+			}
 
-            #endregion
+			#endregion
 
-            List<JuegoDeseado> deseados = new List<JuegoDeseado>();
-            List<string> deseadosSteam = new List<string>();
+			List<JuegoDeseado> deseados = new List<JuegoDeseado>();
+			List<string> deseadosSteam = new List<string>();
 
-            if (string.IsNullOrEmpty(usuario.SteamWishlist) == false)
-            {
-                deseadosSteam = LeerSteamDeseados(usuario.SteamWishlist);
-            }
+			if (string.IsNullOrEmpty(usuario.SteamWishlist) == false)
+			{
+				deseadosSteam = Herramientas.Listados.Generar(usuario.SteamWishlist);
+			}
 
-            if (string.IsNullOrEmpty(usuario.Wishlist) == false)
-            {
-                try
-                {
-                    deseados = JsonConvert.DeserializeObject<List<JuegoDeseado>>(usuario.Wishlist);
-                }
-                catch { }          
-            }
+			if (string.IsNullOrEmpty(usuario.Wishlist) == false)
+			{
+				try
+				{
+					deseados = JsonConvert.DeserializeObject<List<JuegoDeseado>>(usuario.Wishlist);
+				}
+				catch { }          
+			}
 
-            if (deseadosSteam.Count > 0)
-            {
-                foreach (var deseadoSteam in deseadosSteam)
-                {
-                    bool añadir = true;
+			if (deseadosSteam.Count > 0)
+			{
+				foreach (var deseadoSteam in deseadosSteam)
+				{
+					bool añadir = true;
 
-                    foreach (var deseado in deseados)
-                    {
-                        if (deseado.IdSteam == deseadoSteam)
-                        {
-                            añadir = false;
-                        }
-                    }
+					foreach (var deseado in deseados)
+					{
+						if (deseado.IdSteam == deseadoSteam)
+						{
+							añadir = false;
+							break;
+						}
+					}
 
-                    if (añadir == true)
-                    {
-                        Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(null, deseadoSteam);
+					if (añadir == true)
+					{
+						Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(null, deseadoSteam);
 
-                        if (juego != null)
-                        {
-                            JuegoDeseado nuevoDeseado = new JuegoDeseado();
-                            nuevoDeseado.IdBaseDatos = juego.Id.ToString();
-                            nuevoDeseado.IdSteam = deseadoSteam;
-                            nuevoDeseado.DRM = Juegos.JuegoDRM.Steam;
+						if (juego != null)
+						{
+							JuegoDeseado nuevoDeseado = new JuegoDeseado();
+							nuevoDeseado.IdBaseDatos = juego.Id.ToString();
+							nuevoDeseado.Juego = juego;
+							nuevoDeseado.IdSteam = deseadoSteam;
+							nuevoDeseado.DRM = Juegos.JuegoDRM.Steam;
 
-                            deseados.Add(nuevoDeseado);
-                        }
-                    }
-                }
-            }
+							deseados.Add(nuevoDeseado);
+						}
+					}
+				}
+			}
 
-            cantidad = deseados.Count;
+			cantidad = deseados.Count;
 
-            usuario.Wishlist = JsonConvert.SerializeObject(deseados);		
+			usuario.Wishlist = JsonConvert.SerializeObject(deseados);		
 
-            if (deseados.Count > 0)
-            {
-                List<string> listaJuegosPoseeSteam = new List<string>();
+			if (deseados.Count > 0)
+			{
+				List<JuegoDeseado> deseados2 = deseados;
+				List<string> listaJuegosPoseeSteam = new List<string>();
 
-                if (string.IsNullOrEmpty(usuario.SteamGames) == false)
-                {
-                    listaJuegosPoseeSteam = Herramientas.Listados.Generar(usuario.SteamGames);
-                }
+				if (string.IsNullOrEmpty(usuario.SteamGames) == false)
+				{
+					listaJuegosPoseeSteam = Herramientas.Listados.Generar(usuario.SteamGames);
+				}
 
-                foreach (var deseado in deseados)
-                {
-                    Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(deseado.IdBaseDatos);
+				foreach (var deseado in deseados2)
+				{
+					Juegos.Juego juego = new Juegos.Juego();
 
-                    bool añadir = true;
+					if (deseado.Juego != null)
+					{
+						juego = deseado.Juego;
+					}
+					else
+					{
+						juego = BaseDatos.Juegos.Buscar.UnJuego(deseado.IdBaseDatos);
+					}
+
+					bool añadir = true;
 
 					List<Juegos.JuegoPrecio> ordenados = new List<JuegoPrecio>();
 
-                    if (juego.PrecioActualesTiendas != null)
-                    {
-                        if (juego.PrecioActualesTiendas.Count > 0)
-                        {
-                            foreach (JuegoPrecio precio in juego.PrecioActualesTiendas)
-                            {
-                                if (precio.DRM == deseado.DRM)
-                                {
+					if (juego.PrecioActualesTiendas != null)
+					{
+						if (juego.PrecioActualesTiendas.Count > 0)
+						{
+							foreach (JuegoPrecio precio in juego.PrecioActualesTiendas)
+							{
+								if (precio.DRM == deseado.DRM)
+								{
 									bool fechaEncaja = Herramientas.Calculadora.CalcularAntiguedad(precio);
 
-                                    if (fechaEncaja == true)
-                                    {
-                                        JuegoPrecio nuevoPrecio = precio;
+									if (fechaEncaja == true)
+									{
+										JuegoPrecio nuevoPrecio = precio;
 
-                                        if (nuevoPrecio != null)
-                                        {
-                                            if (nuevoPrecio.Moneda != Herramientas.JuegoMoneda.Euro)
-                                            {
+										if (nuevoPrecio != null)
+										{
+											if (nuevoPrecio.Moneda != Herramientas.JuegoMoneda.Euro)
+											{
 												nuevoPrecio.Precio = Herramientas.Divisas.Cambio(nuevoPrecio.Precio, nuevoPrecio.Moneda);
 											}
 										}
@@ -293,21 +307,6 @@
 
 					if (ordenados.Count > 0)
 					{
-						ordenados.Sort(delegate (JuegoPrecio p1, JuegoPrecio p2)
-						{
-							if (p1.Precio == p2.Precio)
-							{
-								return p2.FechaDetectado.CompareTo(p1.FechaDetectado);
-							}
-							else
-							{
-								return p1.Precio.CompareTo(p2.Precio);
-							}
-						});
-					}
-
-					if (ordenados.Count > 0)
-					{
 						añadir = true;
 					}
 
@@ -318,6 +317,7 @@
 							if (juego.IdSteam.ToString() == juegoPosee)
 							{
 								añadir = false;
+								break;
 							}
 						}
 					}
@@ -326,80 +326,30 @@
 					{
 						Juegos.Juego nuevoJuego = juego;
 						nuevoJuego.PrecioActualesTiendas = ordenados;
-						nuevoJuego.Imagenes.Capsule_231x87 = await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.Id.ToString(), "capsule_231x87", dominio);
 
 						JuegoDeseadoMostrar nuevoDeseado = new JuegoDeseadoMostrar();
 						nuevoDeseado.Juego = nuevoJuego;
 						nuevoDeseado.DRM = deseado.DRM;
 						nuevoDeseado.Precio = ordenados[0];
 
-						Herramientas.Deseados.ActualizarJuegoConUsuarios(nuevoDeseado.Juego, nuevoDeseado.DRM, usuario, true);
+						Herramientas.Deseados.ActualizarJuegoConUsuarios(nuevoDeseado.Juego.Id, nuevoDeseado.Juego.UsuariosInteresados, nuevoDeseado.DRM, usuario, true);
 
 						deseadosMostrar.Add(nuevoDeseado);
 					}
 				}
 
-				if (deseadosMostrar.Count > 0)
-				{
-					deseadosMostrar.Sort(delegate (JuegoDeseadoMostrar p1, JuegoDeseadoMostrar p2)
-					{
-						if (p1.Juego.PrecioActualesTiendas[0].Precio == p2.Juego.PrecioActualesTiendas[0].Precio)
-						{
-							return p2.Juego.PrecioActualesTiendas[0].FechaDetectado.CompareTo(p1.Juego.PrecioActualesTiendas[0].FechaDetectado);
-						}
-						else
-						{
-							return p1.Juego.PrecioActualesTiendas[0].Precio.CompareTo(p2.Juego.PrecioActualesTiendas[0].Precio);
-						}
-					});
-				}
+				OrdenarPrecio();
 			}
+		}   
 
-			GuardarUsuario();
-		}      
+		GuardarUsuario();
+		
+		await JavaScript.InvokeVoidAsync("ocultar", cargando);
 	}
 
 	private async void GuardarUsuario()
 	{
 		await UserManager.UpdateAsync(usuario);
-	}
-
-	private List<string> LeerSteamDeseados(string datos)
-	{
-		if (datos != null)
-		{
-			List<string> deseados = new List<string>();
-			string juegos = datos;
-
-			int i = 0;
-			int j = 100000;
-
-			while (i < j)
-			{
-				if (juegos.Contains(",") == true)
-				{
-					int int1 = juegos.IndexOf(",");
-
-					string añadir = juegos.Remove(int1, juegos.Length - int1);
-					deseados.Add(añadir);
-
-					juegos = juegos.Remove(0, int1 + 1);
-				}
-				else
-				{
-					break;
-				}
-
-				i += 1;
-			}
-
-			if (deseados.Count > 0)
-			{
-				return deseados;
-			}
-		}
-
-		return null;
 	}
 
 	private bool DetectarMinimo(Juegos.Juego juego, decimal precio, Juegos.JuegoDRM drm)
