--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
@@ -3,10 +3,12 @@
 @using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.Data.SqlClient;
+@using Microsoft.JSInterop
 @using pepeizqs_deals_web.Areas.Identity.Data;
 
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
+@inject IJSRuntime JavaScript
 
 @if (juegosMostrar.Count > 0)
 {
@@ -23,10 +25,14 @@
 
 				@if (minimo >= 50)
 				{
-					<a @onclick="ClickearAtras" class="boton-pequeño" href="/LastAdded#top" target="_top" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px;"><i class="fa-solid fa-chevron-left"></i></a>
+					<a @onclick="ClickearAtras" class="boton-pequeño" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px; cursor: pointer;">
+						<i class="fa-solid fa-chevron-left"></i>
+					</a>
 				}
 
-				<a @onclick="ClickearAdelante" class="boton-pequeño" href="/LastAdded#top" target="_top" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px;"><i class="fa-solid fa-chevron-right"></i></a>
+				<a @onclick="ClickearAdelante" class="boton-pequeño" style="width: 50px; font-size: 20px; text-align: center; margin-left: 20px; cursor: pointer;">
+					<i class="fa-solid fa-chevron-right"></i>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -37,7 +43,7 @@
 		@foreach (global::Juegos.Juego juego in juegosMostrar)
 		{
 			<div class="perfil-flexible-centrado" style="margin-top: 25px; margin-bottom: 25px;">
-				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id">
+				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/">
 					<div class="perfil-flexible-centrado">
 						<div>
 							<img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" />
@@ -115,7 +121,7 @@
 		}
 	}
 
-	private void ClickearAdelante()
+	private async void ClickearAdelante()
 	{
 		if (minimo + 50 < juegos.Count && maximo + 50 < juegos.Count)
 		{
@@ -124,9 +130,11 @@
 		}
 
 		CargarJuegos(minimo, maximo);
+
+		await JavaScript.InvokeVoidAsync("moverScroll", "cuerpazo");
 	}
 
-	private void ClickearAtras()
+	private async void ClickearAtras()
 	{
 		if (minimo - 50 >= 0 && maximo - 50 >= 0)
 		{
@@ -135,6 +143,8 @@
 		}
 
 		CargarJuegos(minimo, maximo);
+
+		await JavaScript.InvokeVoidAsync("moverScroll", "cuerpazo");
 	}
 
 	private string GenerarMensaje(Juegos.Juego juego)
