--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -176,6 +176,10 @@
         function ocultar(id) {
             document.getElementById(id).style.display = 'none';
         }
+
+        function cargandoMensaje(mensaje) {
+            document.getElementById('cargandoMensaje').innerHTML = mensaje;
+        }
     </script>
 
     <div id="components-reconnect-modal" style="display: none"/>
